tests/fixtures/valid/ignored/builtins/frozenset.py
# Valid frozenset() calls
# Auto-generated by scripts/generate_tests.py

b0_frozenset_str = frozenset("hello")
b1_frozenset_bytes = frozenset(b"hello")
b2_frozenset_list = frozenset([1, 2, 3])
b3_frozenset_dict = frozenset({"a": 1})
b4_frozenset_set = frozenset({1, 2, 3})

print("frozenset() tests passed!")
